java/java-tests/testData/codeInsight/daemonCodeAnalyzer/missingJavadoc/moduleInfo/disabled/module-info.java
<error descr="Module declaration should be located in a module's source root">module Disabled</error> { }